# django-adminfilters

./: .bumpversion.cfg  .coveragerc  .coveralls.yml  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGES  CHANGES.md  LICENSE  MANIFEST.in  Makefile  Procfile  README.md  README.rst  mkdocs.yml  pyproject.toml  pytest.ini  requirements.pip  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
adminfilters/: __init__.py  filters.py  multiselect.py
demo/: runtests.py
demo/demoproject/: settings.py  tests.py  urls.py
docs/: changes.rst  conf.py  filters.rst  globals.rst  index.rst  install.rst  to_gif.sh
docs/_ext/: djangodocs.py  github.py  version.py
docs/depot/: _index.rst
docs/filters/: _index.rst  autocomplete.rst  combo.rst  date.rst  dj.rst  extra.rst  json.rst  multiselect.rst  multivalue.rst  numbers.rst  querystring.rst  radio.rst  value.rst
docs/source/: conf.py
docs/src/: index.md  install.md
requirements/: develop.pip  testing.pip
src/adminfilters/: __init__.py  admin.py  apps.py  autocomplete.py  cellfilter.py  checkbox.py  checks.py  combo.py  compat.py  dates.py  dj.py  extra.py  filters.py  json.py  lookup.py  mixin.py  multiselect.py  numbers.py  querystring.py  radio.py  smart.py  text.py  utils.py  value.py
src/requirements/: develop.pip  testing.pip
tests/: .coveragerc  conftest.py  test_admin.py  test_autocomplete.py  test_automplete.py  test_dates.py  test_dj.py  test_django_check.py  test_extra.py  test_filters.py  test_json.py  test_lookup.py  test_multiselect.py  test_number.py  test_querystring.py  test_related.py  test_text.py  test_utils.py  test_value.py
(+121 files in other folders)
