[project]
name = "django-adminfilters"
version = "2.5.1"
description = "Django mixin to easily add buttons to any ModelAdmin"
readme = "README.md"
requires-python = ">=3.11"
classifiers=[
        'Environment :: Web Environment',
        'Operating System :: OS Independent',
        'Framework :: Django',
        'Framework :: Django :: 4.2',
        'Framework :: Django :: 5.0',
        'Framework :: Django :: 5.1',
        'License :: OSI Approved :: BSD License',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'Topic :: Software Development :: Libraries :: Application Frameworks',
        'Topic :: Software Development :: Libraries :: Python Modules',
        'Intended Audience :: Developers'
    ]

dependencies = [
]

[project.urls]
Homepage = "https://github.com/saxix/django-adminfilterst"
Documentation = "https://github.com/saxix/django-adminfilters"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.1",
    "markdown-include",
    "mkdocs-material>=9.5.36",
    "mkdocs-awesome-pages-plugin>=2.9.3",
    "mkdocstrings-python",
    "mdx-gh-links>=0.4",
]

[tool.uv]
dev-dependencies = [
    "bump2version>=1.0.1",
    "check-manifest>=0.50",
    "django-environ>=0.11.2",
    "factory-boy>=3.3.1",
    "flake8>=7.1.1",
    "isort>=5.13.2",
    "mkdocs-autolinks-plugin>=0.7.1",
    "pdbpp>=0.10.3",
    "prettytable==3.9.0",
    "psycopg2-binary>=2.9.9",
    "pytest-cov>=5.0.0",
    "pytest-django>=4.5.2",
    "pytest-echo>=1.7.3",
    "pytest-selenium<4",
    "pytest<7",
    "selenium==4.9.1",
    "tox>=4.21.2",
]
